Corrected gini-by-region. Moved Malaysia to Asia and removed Oceania. Turkey was missing so I added it to Eastern Europe (Asia was another possibility). Tried a new set of colors. Two blue for America, two green for Europe, orange for Asia, purple for Middle East, pink for Africa.

--- a/viz/gini-by-region.html
+++ b/viz/gini-by-region.html
@@ -68,13 +68,13 @@ function assignColour(countryCode) {
   const Africa = ['CI', 'EG', 'JO', 'SA', 'TU', 'XF-MER'];
   const America_Latin = ['BR', 'XL-MER', 'XL'];
   const America_North = ['US'];
-  const Asia = ['CN', 'CN-RU', 'CN-UR', 'IN', 'KR', 'KW', 'TH'];
-  const Europe_East = ['CZ', 'PL', 'RU', 'SI', 'XR-MER', 'XR'];
+  const Asia = ['CN', 'CN-RU', 'CN-UR', 'IN', 'KR', 'KW', 'MY', 'TH'];
+  const Europe_East = ['CZ', 'PL', 'RU', 'SI', 'TR', 'XR-MER', 'XR'];
   const Europe_West = ['FR', 'GB', 'DE'];
   const Middle_East = ['AE', 'BH', 'IQ', 'IR', 'LB', 'OM', 'PS', 'QA', 'SY', 'XM', 'XN-MER', 'XN', 'YE'];
-  const Oceania = ['MY'];
-  const continent = [Africa, America_Latin, America_North, Asia, Europe_East, Europe_West, Middle_East, Oceania];
-  const color = ['purple', 'red', 'yellowgreen', 'darkgreen', 'pink', 'chartreuse', 'chocolate', 'blue'];
+  const continent = [Africa, America_Latin, America_North, Asia, Europe_East, Europe_West, Middle_East];
+//  const color = ['purple', 'red', 'yellowgreen', 'darkgreen', 'pink', 'chartreuse', 'chocolate', 'blue'];
+  const color = ['pink', 'blue', 'aqua', 'orange', 'forestgreen', 'lightgreen', 'purple'];
   var exists = 'False'
   // seach index of the continent in which the country is
   for (var i = 0; i < continent.length; i++) {
