--- a/viz/gini-by-region.html
+++ b/viz/gini-by-region.html
@@ -60,6 +60,10 @@ svg.append('text')
 /*========== Menu definition ==========*/
 var years=[1905, 1910, 1914, 1918, 1920, 1930, 1936, 1940, 1945, 1950, 1960, 1970, 1980, 1990, 2000, 2010, 2020]
 
+/*========== Legend definition ==========*/
+const continent_names = ['Africa', 'Latin America ', 'North America', 'Asia', 'Europe (East)', 'Europe (West)', 'Middle East', 'Unknow'];
+const continent_colors = ["darkblue", "red", "darkgreen", "purple", "yellowgreen", "hotpink", "darkorange", "black"];
+
 /*========== Function definitions ==========*/
 
 // ====== add ======
@@ -73,13 +77,11 @@ function assignColour(countryCode) {
   const Europe_West = ['FR', 'GB', 'DE'];
   const Middle_East = ['AE', 'BH', 'IQ', 'IR', 'LB', 'OM', 'PS', 'QA', 'SY', 'XM', 'XN-MER', 'XN', 'YE'];
   const continent = [Africa, America_Latin, America_North, Asia, Europe_East, Europe_West, Middle_East];
-//  const color = ['purple', 'red', 'yellowgreen', 'darkgreen', 'pink', 'chartreuse', 'chocolate', 'blue'];
-  const color = ['pink', 'blue', 'aqua', 'orange', 'forestgreen', 'lightgreen', 'purple'];
   var exists = 'False'
   // seach index of the continent in which the country is
   for (var i = 0; i < continent.length; i++) {
     if (continent[i].indexOf(countryCode) != -1) {
-      return color[i];
+      return continent_colors[i];
       exists = 'True';
     }
   }
@@ -222,23 +224,26 @@ function updateGraph(low_year, high_year) {
           }
 
           // Add legend
-          svg_legend.selectAll("dot")
-            .data(country_data)
-            .enter()
-            .append("svg:circle")
-                .attr("cx", function(d){if(count>19){return 200}else{return 0}})
-                .attr("cy", function(d){return placement})
-                .attr("r", "2.8px")
-                .attr("fill", assignColour(current))
+          var title_size=50;
           svg_legend.append("text")
-              .attr('y', function(d){return placement+(text_size/2)})
-              .attr('x', function(d){if(count>19){return 205}else{return 5}})
-            .text(function(d){return country_name;});
-          if (count != 19) {
-            placement = placement + text_size * 2 + 2;
-          } else {
-            placement = 0;
+              .attr('y', function(d){return title_size/2})
+              .attr('x', 0)
+              .attr("font-weight","bold")
+            .text("Legend");
+          var placement=title_size*1.25;
+          for (var j = 0; j < continent_names.length; j++) {
+            svg_legend.append("svg:circle")
+                .attr("cx", 0)
+                .attr("cy", function(d){return placement})
+                .attr("r", "3px")
+                .attr("fill", continent_colors[j])
+            svg_legend.append("text")
+                .attr('y', function(d){return placement+(text_size/2)})
+                .attr('x', 5)
+              .text(function(d){return continent_names[j];});
+            placement=placement+text_size*2+3;
           }
+
           count++;
         } // end if
       } // end for 1
